22-10-05 Object, field 사용자 선택 excel download

--- a/WorkspaceSF/sideProject/force-app/main/default/classes/VideoController.cls
+++ b/WorkspaceSF/sideProject/force-app/main/default/classes/VideoController.cls
@@ -45,4 +45,70 @@ public with sharing class VideoController {
         return delVideos;
     } //delVideoRecords();
 
+    @AuraEnabled(cacheable=true)
+    public static List<Video__c> getSearchList(Map<Object, object> strMap){
+        System.debug('strMap');
+        System.debug(strMap);
+        String searchTitle = String.valueOf(strMap.get('searchTitle'));
+        String searchStr = String.valueOf(strMap.get('searchStr'));
+        
+        System.debug('search Title ::: ');
+        System.debug(searchTitle);
+        System.debug('searchStr ::: ');
+        System.debug(searchStr); 
+        try{
+            if(searchStr == null) {
+                System.debug('searchStr == null !!!');
+                return getVideoList();
+            }
+            String selectQuery = 'SELECT'
+                                          +' Id,'
+                                          +' Name,'
+                                          +' VideoNo__c,'
+                                          +' IsLent__c,'
+                                          +' LentDate__c,'
+                                          +' Video_Genre__c,'
+                                          +' Customer__r.Name'
+                                      +' FROM'
+                                          +' Video__c'
+                                      +' WHERE ';
+            String finalQuery = selectQuery + searchTitle + ' LIKE \'%' + searchStr + '%\'' + ' LIMIT 5';
+            System.debug(finalQuery);
+            List<Video__c> temp = Database.query(finalQuery);
+            
+            System.debug(temp);
+            return temp;
+        }catch(Exception e) {
+            System.debug('ERRORRRR');
+            System.debug(e);
+        } // try / catch
+        
+        return null;
+    } // getSearchList()
+
+    @AuraEnabled(cacheable=true)
+    public static List<Video__c> getDataExportToExcel(){
+        List<Video__c> exDataList = [SELECT
+                                            Id,
+                                            Name,
+                                            VideoNo__c,
+                                            IsLent__c,
+                                            // LentDate__c,
+                                            Video_Genre__c,
+                                            Customer__r.Name
+                                        FROM 
+                                            Video__c
+                                        ORDER BY
+                                            VideoNo__c ASC];
+        
+            return exDataList;
+    } // getDataExportToExcel()
+
+    @AuraEnabled(cacheable=true)
+    public static List<Contact> getAccountDataToExport(){
+        List<Contact> lstContacts = [SELECT Id, FirstName, LastName, Email 
+                                                    FROM Contact WHERE Email != null LIMIT 10];
+        return lstContacts;
+    }
+    
 } // class
